--- a/django_blog/.gitattributes
+++ b/django_blog/.gitattributes
@@ -1,3 +1,3 @@
-*.js linguist-language=Scala
-*.css linguist-language=Scala
-*.html linguist-language=Scala
+*.js linguist-language=Pthon
+*.css linguist-language=Pthon
+*.html linguist-language=Python
